<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="216dp"
        android:layout_height="24dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="26dp"
        android:layout_marginRight="33dp"
        android:gravity="center"
        android:text="@string/privacy_and_user"
        android:textColor="#333333"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="218dp"
        android:layout_height="57dp"
        android:gravity="center"
        android:layout_marginTop="18dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_below="@+id/tv_title"
            android:text="@string/bluetooth_and_wlan"
            android:textColor="#333333"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_3"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:text="@string/network"
            android:textColor="#333333"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_4"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_below="@+id/tv_3"
            android:text="@string/click_agree"
            android:textColor="#333333"
            android:textSize="10sp" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginLeft="8dp">

            <TextView
                android:id="@+id/tv_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textColor="#333333"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy"
                android:textColor="#327fd9"
                android:textSize="10sp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and"
                android:textColor="#333333"
                android:textSize="10sp"/>

            <TextView
                android:id="@+id/agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textColor="#327fd9"
                android:textSize="10sp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="。"
                android:textSize="10sp"></TextView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_ok"
            android:gravity="center"
            android:text="@string/Cancel"
            android:textColor="#333333" />

        <TextView
            android:id="@+id/consent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_img"
            android:gravity="center"
            android:text="@string/agree_btn"></TextView>
    </LinearLayout>


</LinearLayout>